<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">FSpammer</string>
    <string name="pref_description_block_enabled">Applies on restart of QQ</string>
    <string name="pref_title_block_enabled">Enable blocker</string>
    <string name="pref_default_block_regex" translatable="false">^(签到$|我找|查询|猜数).*</string>
    <string name="pref_title_block_regex">Block rules (RegEx)</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_debug_enabled">Debug logs</string>
    <string name="pref_description_debug_enabled">Be chatty in logcat. Applies on restart of QQ.\nNote: this will print every message you receive!</string>
    <string name="pref_category_misc">Misc</string>
    <string name="pref_title_about_me">About </string>
    <string name="xposeddescription">Filter messages matching RegEx in QQ groups. Set it up before usage!</string>
    <string name="about_me_format" translatable="false">FSpammer <xliff:g id="VER">%1$s</xliff:g></string>
    <string name="about_me_detail">FSpammer, stop spammers in your group!\n\nHamster Tian, 2016.\nSources available at https://github.com/HamsterReserved/FSpammer\n\nInspired by fkzhang\'s QQUnrecalled plugin.</string>
    <string name="pref_title_restart_qq">Restart QQ</string>
    <string name="pref_description_restart_qq">Force-stop QQ and restart it to apply the settings</string>
    <string name="progress_restart_qq">Restarting QQ\u2026</string>
    <string name="progress_restart_qq_failed">Failed restarting QQ. Please check if you have root access.</string>
</resources>
